# linuxmotehook2

./: .gitignore  .gitmodules  Dockerfile  ExampleConfig.ini  FUNDING.yml  README.md  meson.build
.circleci/: build-and-package.sh  config.yml  install-dependencies.sh  ppa-publish.sh
.github/workflows/: appimage.yml  meson.yml
debian/: control  copyright  rules
src/: ClassicController.vala  Config.vala  ExtensionDevice.vala  MainDevice.vala  Nunchuck.vala  Server.vala  Utils.vala  main.vala  meson.build
subprojects/: .gitignore  README.md  xwiimote.wrap
subprojects/packagefiles/xwiimote/: meson.build
vapi/: xwiimote.vapi
